[gd_scene load_steps=5 format=3 uid="uid://bhbd3rynp5igc"]

[ext_resource type="Texture2D" uid="uid://drdgpa5dtnwua" path="res://Assets/Towers/Bases/PNGs/Tower 01.png" id="1_3virl"]
[ext_resource type="Texture2D" uid="uid://cuvg3jlengli8" path="res://Assets/Towers/Weapons/Tower 01/Aseprite/Tower 01 - Level 01 - Weapon.aseprite" id="2_bacms"]
[ext_resource type="Script" path="res://Weapon.gd" id="3_f2cvi"]

[sub_resource type="CircleShape2D" id="CircleShape2D_h2wam"]
radius = 211.009

[node name="Tower" type="Node2D"]

[node name="Tower01" type="Sprite2D" parent="."]
texture = ExtResource("1_3virl")
hframes = 3

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(1.00002, -12)
scale = Vector2(1.25, 1.25)

[node name="Tower01-Level01-Weapon" type="Sprite2D" parent="Node2D"]
position = Vector2(3.99998, 2.39998)
rotation = 1.5708
scale = Vector2(1, 1)
texture = ExtResource("2_bacms")
script = ExtResource("3_f2cvi")

[node name="Marker2D" type="Marker2D" parent="Node2D/Tower01-Level01-Weapon"]
position = Vector2(0, -28.8)
rotation = -1.5708
scale = Vector2(1, 1)
gizmo_extents = 171.9

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource("CircleShape2D_h2wam")

[node name="FireRate" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="Node2D/Tower01-Level01-Weapon" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="Node2D/Tower01-Level01-Weapon" method="_on_area_2d_body_exited"]
[connection signal="timeout" from="FireRate" to="Node2D/Tower01-Level01-Weapon" method="_on_fire_rate_timeout"]
